--- a/league_table/templates/profile/profile_detail.html
+++ b/league_table/templates/profile/profile_detail.html
@@ -111,6 +111,8 @@
                         <span class="name">Total Secondary Schools</span>
                         {% endblock %}
                     </span>
+
+                    <a href="javascript:;" class="pull-right" onclick="javascript: embedMap('{{ geography.this.geo_level }}', '{{geography.this.geo_code}}', '{{geography.this.short_name}}');">Embed Map</a>
                 </div>
             </div>
 
