--- a/hurumap_ke/templates/_footer.html
+++ b/hurumap_ke/templates/_footer.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% block footer_branding %}
     <a href="https://codeforafrica.org" target="_blank">
-            <img src="{% static 'img/logos/cfkenya-logo-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
+            <img src="{% static 'img/logos/cfkenya-logo-white.png' %}" alt="Code for Kenya" style="margin-top: 0;"></a>
         <a href="https://icfj.org" target="_blank">
             <img src="{% static 'img/logos/icfj-white.png' %}" alt="ICFJ" style="max-height: 42px;"></a>
 {% endblock %}
