added profiles template

--- a/league_table/static/css/hurumap.css
+++ b/league_table/static/css/hurumap.css
@@ -233,3 +233,5 @@ body {
 
 .how-it-works img {
   max-width: 70px; }
+
+/*# sourceMappingURL=../../../../../../../../static/css/hurumap.css.map */
