--- a/league_table/static/css/wazimap.css
+++ b/league_table/static/css/wazimap.css
@@ -4222,3 +4222,5 @@ header.section-contents h1 a {
 .profile-head2head-frame #compare-place-picker,
 .profile-head2head-frame #uvTab {
   display: none; }
+
+/*# sourceMappingURL=../../../../../../../../static/css/wazimap.css.map */
