added religion data

--- a/hurumap_ke/templates/profile/profile_detail.html
+++ b/hurumap_ke/templates/profile/profile_detail.html
@@ -33,6 +33,10 @@
             </div>
             <div class="column-quarter" id="chart-pie-demographics-age_category_distribution" data-stat-type="percentage" data-chart-title="Population by age category"></div>
         </section>
+        <section class="clearfix stat-row">
+            <h2><a class="permalink" href="#religion" id="religions">Religion Distribution <i class="fa fa-link"></i></a></h2>
+            <div class="column-half" id="chart-pie-demographics-religion_ratio" data-stat-type="scaled-percentage" data-chart-title="Main Religions"></div>
+        </section>
 
     </div>
 </article>
