added household heads data

--- a/hurumap_ke/templates/profile/profile_detail.html
+++ b/hurumap_ke/templates/profile/profile_detail.html
@@ -126,6 +126,10 @@
             <div class="column-third" id="chart-pie-households-floor_material_distribution" data-stat-type="scaled-percentage" data-chart-title="Households by main type of floor material"></div>
             <div class="column-third" id="chart-pie-households-wall_material_distribution" data-stat-type="scaled-percentage" data-chart-title="Households by main type of wall material"></div>
         </section>
+        <section class="clearfix stat-row">
+            <h2><a class="permalink" href="#households-heads" id="households-heads">Household Heads <i class="fa fa-link"></i></a></h2>
+            <div class="column-half" id="chart-histogram-households-household_heads" data-stat-type="scaled-percentage" data-chart-title="Female or Youth Headed Households"></div>
+        </section>
 
     </div>
 </article>
