--- a/humandevprofiles/templates/profile/profile_detail.html
+++ b/humandevprofiles/templates/profile/profile_detail.html
@@ -7,140 +7,38 @@
 {% endblock %}
 
 {% block profile_detail %}
-    <article id="demographics"
-             class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Demographics</h1>
-        </header>
-        <div class="section-container">
-
-            <section class="clearfix stat-row">
-                <h2 class="header-for-columns">
-                    <a class="permalink"
-                       href="#pop_count"
-                       id="pop_count">Population <i
-                            class="fa fa-link"></i></a></h2>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-demographics-sex_ratio"
-                     data-stat-type="percentage" data-chart-title="Sex"></div>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=demographics.urbanised stat_type='percentage' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-grouped_column-demographics-urban_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Urban vs rural by sex"></div>
-            </section>
-
-        </div>
-    </article>
-
-    <article id="households"
-             class="clearfix {% if 'households' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Households</h1>
-        </header>
-        <div class="section-container">
-
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Households <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=households.total_households stat_type='number' %}
-                </div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-water"
-                       id="households-water">Percentage by Permanency <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-percentage_by_permanency"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Households Percentage by permanency"></div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-lighting"
-                       id="households-lighting">Main source of lighting <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-light_source_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Light source distribution"></div>
-            </section>
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households-lighting"
-                       id="households-lighting">Main source of energy <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-three-quarters"
-                     id="chart-histogram-households-energy_source_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Energy source distribution"></div>
-            </section>
-
-        </div>
-    </article>
-
-    <article id="disability"
-             class="clearfix {% if 'households' not in selected_sections %}hide{% endif %}">
-        <header class="section-contents">
-            <h1>Population with disability</h1>
-        </header>
-        <div class="section-container">
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Population <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=disability.total_ stat_type='number' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-disability-disabled_or_not_distribution"
-                     data-stat-type="percentage"
-                     data-chart-title="With or Without Disability"></div>
-                <div class="column-quarter">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=disability.total_disabled stat_type='percentage' %}
-                </div>
-                <div class="column-quarter"
-                     id="chart-pie-disability-disability"
-                     data-stat-type="percentage"
-                     data-chart-title="Type of disability"></div>
-            </section>
-
-        </div>
-    </article>
-
-    <article id="elections2016"
+    <article id="life_expectancy"
              class="clearfix">
         <header class="section-contents">
-            <h1>2016 Elections</h1>
+            <h1>Life Expectancy</h1>
         </header>
         <div class="section-container">
-            <section class="clearfix stat-row">
-                <h2><a class="permalink" href="#households">Votes Cast <i
-                        class="fa fa-link"></i></a></h2>
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.total_votes stat_type='number' %}
-                </div>
-
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.museveni_votes stat_type='percentage' %}
-                </div>
-
-                <div class="column-third">
-                    {% include 'profile/_blocks/_stat_list.html' with stat=elections2016.besigye_votes stat_type='percentage' %}
-                </div>
-
-            </section>
 
             <section class="clearfix stat-row">
-                <div class="column-three-quarters"
-                     id="chart-histogram-elections2016-candidate_distribution"
-                     data-stat-type="scaled-percentage"
-                     data-chart-title="Votes Distribution"></div>
+                <div class="column-three-quarters">
+                    {% include 'profile/_blocks/_line_graph_stats.html' with x_values=life_expectancy.x y_values=life_expectancy.y chart_title=life_expectancy.chart_title x_label=life_expectancy.x_label y_label=life_expectancy.y_label %}
+                </div>
             </section>
+
         </div>
     </article>
+
+{#    <article id="gni"#}
+{#             class="clearfix">#}
+{#        <header class="section-contents">#}
+{#            <h1>GNI Index</h1>#}
+{#        </header>#}
+{#        <div class="section-container">#}
+{##}
+{#            <section class="clearfix stat-row">#}
+{#                <div class="column-three-quarters">#}
+{#                    {% include 'profile/_blocks/_line_graph_stats.html' with x_values=gni.x y_values=gni.y chart_title=gni.chart_title x_label=gni.x_label y_label=gni.y_label %}#}
+{#                </div>#}
+{#            </section>#}
+{##}
+{#        </div>#}
+{#    </article>#}
+
+
 
 {% endblock %}
