--- a/humandevprofiles/templates/profile/_blocks/_line_graph_stats.html
+++ b/humandevprofiles/templates/profile/_blocks/_line_graph_stats.html
@@ -4,11 +4,11 @@
 {#<script src="{{ STATIC_URL }}js/vendor/chart.min.js"></script>#}
 
 
-<canvas id="line-chart"></canvas>
+<canvas id="{{ uid }}"></canvas>
 
 <script>
 
-    var ctx = document.getElementById('line-chart').getContext('2d');
+    var ctx = document.getElementById('{{ uid }}').getContext('2d');
     var chart = new Chart(ctx, {
         type: 'line',
 
