--- a/hurumap_tz/templates/blocks/showcase.html
+++ b/hurumap_tz/templates/blocks/showcase.html
@@ -6,9 +6,8 @@
         <br/>
         {% for story in HURUMAP.showcase_stories %}
             <div class="column-third text-left">
-                <div class="img" style="background-image: url('{{ story.img }}');"></div>
-                <!--<h3>{{ story.title }}</h3>-->
-                <p class='small'>By {{ story.author }}</p>
+                <img src="{{ story.img }}"/>
+                <p class='small cleafix'>By {{ story.author }}</p>
                 <p>{{ story.brief }}</p>
                 <br/>
                 <p class="clearfix"><a href="{{ story.link }}" target="_blank" rel="noopener" class="btn btn-lg bg-bottle-green">Read more</a></p>
