--- a/humandevprofiles/templates/profile/profile_detail.html
+++ b/humandevprofiles/templates/profile/profile_detail.html
@@ -1,16 +1,6 @@
 {% extends 'profile/profile_detail.html' %}
 
 {% block profile_header_tail %}
-    <div class="column-three-quarters">
-        <div class="stat">
-                    <span class="primary">
-                        {% block profile_header_population %}
-                            <span class="value">{{ demographics.total_population.values.this|floatformat:"0" }}</span>
-                            <span class="name">Population</span>
-                        {% endblock %}
-                    </span>
-        </div>
-    </div>
     <div class="column-full">
         <p class="caption"><strong>Census data:</strong> 2014</p>
     </div>
@@ -21,14 +11,77 @@
     <article
             class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
         <header class="section-contents">
-            <h1>Economy</h1>
+            <h1>HDI Overview</h1>
         </header>
         <div class="section-container">
             <section class="clearfix stat-row">
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=hdi_overview.hdi stat_type='number' %}
+                </div>
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=hdi_overview.rank stat_type='number' %}
+                </div>
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=hiv_prevalence.current_prevalence stat_type='percentage' %}
+                </div>
+            </section></div>
+                <div class="section-container">
+            <section class="clearfix stat-row">
+
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.forest_area__of_total_land_area stat_type='percentage' %}
+                </div>
+
+                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.population_living_below_income_poverty_line_ppp_190_a_day_ stat_type='percentage' %}
+                </div>
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.pupil_teacher_ratio_primary_school stat_type='number' %}
+                </div>
+            </section></div>
+                <div class="section-container">
+            <section class="clearfix stat-row">
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.homicide_rate_per_100000_people stat_type='number' %}
+                </div>
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.public_health_expenditure_of_gdp stat_type='percentage' %}
+                </div>
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.internet_users__of_population stat_type='percentage' %}
+                </div>
+            </section></div>
+                <div class="section-container">
+            <section class="clearfix stat-row">
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.gender_development_index stat_type='number' %}
+                </div>
+
+
+                                <div class="column-third">
+                    {% include 'profile/_blocks/_stat_list.html' with stat=landscape.domestic_food_price_level_index stat_type='number' %}
+                </div>
+            </section>
+
+        </div>
+    </article>
+    <article
+            class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
+        <header class="section-contents">
+            <h1>Economy</h1>
+        </header>
+        <div class="section-container">
+
+            <section class="clearfix stat-row">
                 <div class="column-full"
-                     id="chart-histogram-gni-gni"
+                     id="chart-histogram-gdp-gdp"
                      data-stat-type="number"
-                     data-chart-title="Allocation Distribution"></div>
+                     data-chart-title="GDP in billions of US$"></div>
             </section>
 
         </div>
@@ -44,7 +97,17 @@
                 <div class="column-full"
                      id="chart-histogram-life_expectancy-life_expectancy"
                      data-stat-type="number"
-                     data-chart-title="Life Expectancy"></div>
+                     data-chart-title="Life Expectancy For the last 10 years"></div>
+            </section>
+
+        </div>
+
+        <div class="section-container">
+            <section class="clearfix stat-row">
+                <div class="column-full"
+                     id="chart-histogram-hiv_prevalence-HIV"
+                     data-stat-type="scaled-percentage"
+                     data-chart-title="HIV Prevalence For the last 10 years as a % of the population aged 15 - 49"></div>
             </section>
 
         </div>
@@ -57,13 +120,47 @@
         </header>
         <div class="section-container">
             <section class="clearfix stat-row">
-                <div class="column-three-quarters"
+                <h4>Population 2016</h4>
+                {% include 'profile/_blocks/_stat_list.html' with stat=demographics.total_population stat_type='number' %}
+            </section>
+            <section class="clearfix stat-row">
+                <div class="column-full"
                      id="chart-histogram-demographics-population_dist"
                      data-stat-type="number"
-                     data-chart-title="Population For the last 10 years"></div>
+                     data-chart-title="Population For the last 5 years"></div>
             </section>
 
         </div>
     </article>
 
+        <article
+            class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
+        <header class="section-contents">
+            <h1>Education</h1>
+        </header>
+        <div class="section-container">
+            <section class="clearfix stat-row">
+                <div class="column-full"
+                     id="chart-histogram-literacy-literacy"
+                     data-stat-type="scaled-percentage"
+                     data-chart-title="Literate Percentage of population above 15 years"></div>
+            </section>
+
+        </div>
+    </article>
+        <article
+            class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
+        <header class="section-contents">
+            <h1>Agriculture</h1>
+        </header>
+        <div class="section-container">
+            <section class="clearfix stat-row">
+                <div class="column-full"
+                     id="chart-histogram-crops-crop"
+                     data-stat-type="number"
+                     data-chart-title="Crop Production Index For the last 10 years"></div>
+            </section>
+
+        </div>
+    </article>
 {% endblock %}
